Closed
Bug 342950
Opened 19 years ago
Closed 19 years ago
crash when trying to print
Categories
(Core :: Printing: Output, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: wolfiR, Unassigned)
Details
(Keywords: crash, fixed1.8.1)
Attachments
(1 file)
|
1004 bytes,
patch
|
roc
:
review+
roc
:
superreview+
beltzner
:
approval1.8.1+
|
Details | Diff | Splinter Review |
Firefox 2.0a3 crashes when trying to File->Print.
I've submitted a crash report with talkback id TB20356162W
It seems to be introduced with bug 324072
Please also see
https://bugzilla.novell.com/show_bug.cgi?id=187013
Wolfgang, do you want to take this?
| Reporter | ||
Comment 3•19 years ago
|
||
The same has to go to 1.8 branch (the source file has been moved but the fix is the same.
| Reporter | ||
Comment 4•19 years ago
|
||
Comment on attachment 227508 [details] [diff] [review]
patch
Rob, maybe it's possible to get also sr from you for that?
Attachment #227508 -
Flags: review?(roc)
Comment on attachment 227508 [details] [diff] [review]
patch
oopsie
Attachment #227508 -
Flags: superreview+
Attachment #227508 -
Flags: review?(roc)
Attachment #227508 -
Flags: review+
| Reporter | ||
Updated•19 years ago
|
Attachment #227508 -
Flags: approval1.8.1?
| Reporter | ||
Comment 6•19 years ago
|
||
checked in to trunk:
Checking in nsPrintOptionsImpl.cpp;
/cvsroot/mozilla/widget/src/xpwidgets/nsPrintOptionsImpl.cpp,v <-- nsPrintOptionsImpl.cpp
new revision: 1.84; previous revision: 1.83
done
Comment 7•19 years ago
|
||
Comment on attachment 227508 [details] [diff] [review]
patch
Please check this in to trunk and let it bake before requesting branch approval. Thanks!
Attachment #227508 -
Flags: approval1.8.1?
| Reporter | ||
Comment 8•19 years ago
|
||
Comment on attachment 227508 [details] [diff] [review]
patch
no bustages on trunk since checkin
Attachment #227508 -
Flags: approval1.8.1?
Comment 9•19 years ago
|
||
Comment on attachment 227508 [details] [diff] [review]
patch
cleared to land on runway 181
Attachment #227508 -
Flags: approval1.8.1? → approval1.8.1+
| Reporter | ||
Comment 10•19 years ago
|
||
branch checkin
Checking in gfx/src/nsPrintOptionsImpl.cpp;
/cvsroot/mozilla/gfx/src/Attic/nsPrintOptionsImpl.cpp,v <-- nsPrintOptionsImpl.cpp
new revision: 1.76.2.2; previous revision: 1.76.2.1
done
You need to log in
before you can comment on or make changes to this bug.
Description
•