Bug 342950 - crash when trying to print, r+sr=roc